
- Issue #2179: speed up with statement execution by storing the exit method
  on the stack instead of in a temporary variable (patch by Jeffrey Yaskin)

- Issue #2238: Some syntax errors in *args and **kwargs expressions could give
  bogus error messages.

- Issue #2143: Fix embedded readline() hang on SSL socket EOF.

Library
-------

- Issue #2434: Enhanced platform.win32_ver() to also work on Python
  installation which do not have the win32all package installed.

- Added support to platform.uname() to also report the machine
  and processor information on Windows XP and later. As a result,
  platform.machine() and platform.processor() will report this
  information as well.

- The library implementing the 2to3 conversion, lib2to3, was added
  to the standard distribution.

- Issue #1747858: Fix chown to work with large uid's and gid's on 64-bit
  platforms.

- Issue #1202: zlib.crc32 and zlib.adler32 no longer return different values
  on 32-bit vs. 64-bit python interpreters.  Both were correct, but they now
  both return a signed integer object for consistency.

- Issue #1158: add %f format (fractions of a second represented as
  microseconds) to datetime objects.  Understood by both strptime and
  strftime.

- Issue #705836: struct.pack(">f", x) now raises OverflowError on all
  platforms when x is too large to fit into an IEEE 754 float; previously
  it only raised OverflowError on non IEEE 754 platforms.

- Issue #1106316: pdb.post_mortem()'s parameter, "traceback", is now
  optional: it defaults to the traceback of the exception that is currently
  being handled (is mandatory to be in the middle of an exception, otherwise
  it raises ValueError).

- Issue #1193577: A .shutdown() method has been added to SocketServers
  which terminates the .serve_forever() loop.

- Bug #2220: handle rlcompleter attribute match failure more gracefully.

- Issue #2225: py_compile, when executed as a script, now returns a non-